// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-verification-code renders 1`] = `
<sc-verification-code>
  <mock:shadow-root>
    <div class="verification-code-area">
      <input class="code-input code-input-0" required="" value="">
      <input class="code-input code-input-1" required="" value="">
      <input class="code-input code-input-2" required="" value="">
      <input class="code-input code-input-3" required="" value="">
      <input class="code-input code-input-4" required="" value="">
      <input class="code-input code-input-5" required="" value="">
      <button aria-hidden="true" type="submit" style="position: absolute; left: -9999px;">
        Submit
      </button>
    </div>
  </mock:shadow-root>
</sc-verification-code>
`;

exports[`sc-verification-code renders with total 1`] = `
<sc-verification-code total="4">
  <mock:shadow-root>
    <div class="verification-code-area">
      <input class="code-input code-input-0" required="" value="">
      <input class="code-input code-input-1" required="" value="">
      <input class="code-input code-input-2" required="" value="">
      <input class="code-input code-input-3" required="" value="">
      <button aria-hidden="true" type="submit" style="position: absolute; left: -9999px;">
        Submit
      </button>
    </div>
  </mock:shadow-root>
</sc-verification-code>
`;
